
Improving URI normalization used internally by the pool, to ensure that same RRD opened using different path are indeed resolved as the same.

Added a RrdDbPool.lockEmpty method to wait for an empty pool and lock it.

The RrdDb.Builder.setPool now automatically enable the pool usage.

Changes in version 3.6 - 06 Apr 2020.
-------------------------------

Adding source for background or overlay image. They can be now an URL or even a custom generated image.

An image can also be added in the canvas (the area where the plot are drawn).

Dropped java 1.7 support.

Build settings to compile with latest JVM, but still able to run on the officially support JVM.

A new pool, using features from Java 8. They were some rare leaks in the old one and using modern java features should reduce locking.
It contains some assert so it might help discover problems early. All the public requestRrdDb are not deprecated any more, as they provide
a convenient way to get RrdDb using a pool.

* Fixed Issue 135: ByteBufferBackend.get fails with BufferUnderflow.

Changes in version 3.5 - 10 Feb 2019.
------------------------------------

This version include minor tunings, that should slightly reduce memory usage.

RrdGraph can now take a custom ImageWriter and ImageWriteParam for better control of generated image.

The class DataImporter is now public, it allows to define custom importer.

RrdDb are now made using a Builder, because of the explosion of parameters. The builder can also be used to define the use of a pool.

A RrdDb now remember if it was open directly or from the pool, so calling RrdDbPool.release is not needed any more.

The RrdDbPool is not restricted any more to files.

* Fixed Issue 123: Char arrays duplicates with ConsoleFun values in memory.
* Fixed Issue 124: RRD4j 3.4 increasing number of open files.

Changes in version 3.4 - 27 Dec 2018.
------------------------------------

This version is an important version, with many internal rewrite and code cleaning. 
