@@ -2,8 +2,8 @@ package org.rrd4j.core.jrrd;
 
 import java.util.Map;
 
+import org.rrd4j.data.IPlottable;
 import org.rrd4j.data.LinearInterpolator;
-import org.rrd4j.data.Plottable;
 
 /**
  * Models a chunk of result data from an RRDatabase.
@@ -112,7 +112,7 @@ public class DataChunk {
      * @param name the datasource name
      * @return a plottable for the datasource
      */
-    public Plottable toPlottable(String name) {
+    public IPlottable toPlottable(String name) {
         Integer dsId = nameindex.get(name);
         if(dsId == null)
             throw new RuntimeException("datasource not not found: " + name);
